// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CheckBoxFilterEditor NewCheckBoxFilterEditor rendering renders expected elements 1`] = `
<FilterEditor
  aria-labelledby="random-id-label"
  chipId="button"
  id="random-id"
  onSave={[Function]}
>
  <fieldset
    className="CheckBoxFilterEditor"
  >
    <legend
      className="CheckBoxFilterEditor__legend"
      id="random-id-label"
    >
      label
    </legend>
    <div
      className="CheckBoxFilterEditor__options"
    >
      <CheckBox
        checked={true}
        className="CheckBoxFilterEditor__option"
        id="random-id-a"
        label="a"
        onChange={[Function]}
        value={0}
      />
      <CheckBox
        checked={false}
        className="CheckBoxFilterEditor__option"
        id="random-id-b"
        label="b"
        onChange={[Function]}
        value={1}
      />
    </div>
  </fieldset>
</FilterEditor>
`;

exports[`CheckBoxFilterEditor NewCheckBoxFilterEditor rendering renders expected elements when list is not set 1`] = `
<FilterEditor
  aria-labelledby="random-id-label"
  chipId="button"
  id="random-id"
  onSave={[Function]}
>
  <fieldset
    className="CheckBoxFilterEditor"
  >
    <legend
      className="CheckBoxFilterEditor__legend"
      id="random-id-label"
    >
      label
    </legend>
    <div
      className="CheckBoxFilterEditor__options"
    >
      <CheckBox
        checked={false}
        className="CheckBoxFilterEditor__option"
        id="random-id-a"
        label="a"
        onChange={[Function]}
        value={0}
      />
      <CheckBox
        checked={false}
        className="CheckBoxFilterEditor__option"
        id="random-id-b"
        label="b"
        onChange={[Function]}
        value={1}
      />
    </div>
  </fieldset>
</FilterEditor>
`;

exports[`CheckBoxFilterEditor OldCheckBoxFilterEditor rendering renders expected elements 1`] = `
<fieldset
  className="CheckBoxFilterEditor"
>
  <legend
    className="CheckBoxFilterEditor__legend"
  >
    label
  </legend>
  <CheckBox
    checked={true}
    className="CheckBoxFilterEditor__option"
    id="checkBoxOption-a"
    label="a"
    onChange={[Function]}
  />
  <CheckBox
    checked={false}
    className="CheckBoxFilterEditor__option"
    id="checkBoxOption-b"
    label="b"
    onChange={[Function]}
  />
</fieldset>
`;

exports[`CheckBoxFilterEditor rendering renders expected elements when forArea is not set 1`] = `
<OldCheckBoxFilterEditor
  getLabel={[MockFunction]}
  label="label"
  options={[]}
/>
`;

exports[`CheckBoxFilterEditor rendering renders expected elements when forArea is set 1`] = `
<NewCheckBoxFilterEditor
  getLabel={[MockFunction]}
  label="label"
  options={[]}
/>
`;
